// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichSelectTags renders correctly when tags are removed then added 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-3 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.emotion-3.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.emotion-5:hover {
  border-color: hsl(0, 0%, 70%);
}

.emotion-5:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.emotion-5:focus-within svg {
  fill: #4f0599;
}

.emotion-5:hover {
  border-color: #4f0599;
}

.emotion-5:hover svg {
  fill: #4f0599;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.emotion-8 {
  position: absolute;
  left: 0;
  top: 6px;
  font-weight: 400;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
  -webkit-transform: translate(0, -8px) scale(0.8);
  -moz-transform: translate(0, -8px) scale(0.8);
  -ms-transform: translate(0, -8px) scale(0.8);
  transform: translate(0, -8px) scale(0.8);
  transform-origin: left;
  padding-left: 8px;
  left: 0;
  top: 0;
  opacity: 1;
}

.emotion-9 {
  color: #4a4f62;
  margin-left: 0;
  margin-right: 0;
  max-width: calc(100% - 8px);
  overflow: hidden;
  position: absolute;
  text-overflow: ellipsis;
  white-space: nowrap;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
  margin-top: 8px;
  padding-left: 0;
}

.emotion-10 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
}

.emotion-11 input {
  position: absolute;
  top: 50%;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.emotion-13 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.emotion-14 {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-14:hover {
  color: hsl(0, 0%, 60%);
}

.emotion-16 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.emotion-16.emotion-16 {
  vertical-align: middle;
  margin-right: 0;
}

.emotion-17 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-17.emotion-17 {
  overflow: hidden;
}

.emotion-18.emotion-18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.emotion-20.emotion-20 {
  min-width: 144px;
  margin-left: 16px;
}

.emotion-20:hover,
.emotion-20:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20:hover,
.emotion-20:focus {
  color: #4a4f62;
  background-color: #e9e7ec;
}

.emotion-20:focus {
  box-shadow: 0 0 0 2px rgba(246,245,247,0.25);
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class=" emotion-2 emotion-3"
      data-testid="rich-select-richselect-options"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="emotion-4"
      />
      <div
        class=" emotion-5"
      >
        <div
          class=" emotion-6"
        >
          <label
            aria-live="assertive"
            class="emotion-7 emotion-8"
            for="input-6c756c756c756c756c756c756c756c75"
            id="label-6c756c756c756c756c756c756c756c75"
          >
            Select an option in the list
          </label>
          <div
            class=" emotion-9"
          >
            Three
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
              style="caret-color: transparent; display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 0; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" emotion-12"
        >
          <span
            class=" emotion-13"
          />
          <div
            aria-hidden="true"
            class=" emotion-14"
          >
            <svg
              class="sc-ui-icon emotion-15 emotion-16"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="richselect-options"
        type="hidden"
        value="three"
      />
      <div
        class="emotion-17"
      >
        <div
          class="emotion-18"
        />
      </div>
    </div>
    <button
      aria-disabled="false"
      class="emotion-19 emotion-20"
      data-testid="rich-select-tags-add"
      type="button"
    >
      <div
        class="emotion-21 emotion-22"
      >
        Add
      </div>
    </button>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 0;
  padding: 8px 0;
}

.emotion-0>input:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.4);
}

.emotion-0>* {
  margin-bottom: 6px;
}

.emotion-0>*:not(:last-child) {
  margin-right: 6px;
}

.emotion-2 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #b2b6c3;
  padding: 4px;
  width: 32px;
  height: 32px;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #eeeeff;
}

.emotion-6:hover svg,
.emotion-6:focus svg {
  fill: #4f0599;
}

.emotion-8 {
  fill: #b2b6c3;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-8.emotion-8 {
  vertical-align: middle;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <span
        aria-disabled="false"
        class="emotion-3 emotion-4"
      >
        One
      </span>
      <button
        class="emotion-5 emotion-6"
        type="button"
      >
        <svg
          class="sc-ui-icon emotion-7 emotion-8"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <span
        aria-disabled="false"
        class="emotion-3 emotion-4"
      >
        Three
      </span>
      <button
        class="emotion-5 emotion-6"
        type="button"
      >
        <svg
          class="sc-ui-icon emotion-7 emotion-8"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RichSelectTags renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-3 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.emotion-3.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.emotion-5:hover {
  border-color: hsl(0, 0%, 70%);
}

.emotion-5:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.emotion-5:focus-within svg {
  fill: #4f0599;
}

.emotion-5:hover {
  border-color: #4f0599;
}

.emotion-5:hover svg {
  fill: #4f0599;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.emotion-8 {
  position: absolute;
  left: 0;
  top: 6px;
  font-weight: 400;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.emotion-9 {
  color: #b2b6c3;
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-10 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
}

.emotion-11 input {
  position: absolute;
  top: 50%;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.emotion-13 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.emotion-14 {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-14:hover {
  color: hsl(0, 0%, 60%);
}

.emotion-16 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.emotion-16.emotion-16 {
  vertical-align: middle;
  margin-right: 0;
}

.emotion-17 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-17.emotion-17 {
  overflow: hidden;
}

.emotion-18.emotion-18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.emotion-20.emotion-20 {
  min-width: 144px;
  margin-left: 16px;
}

.emotion-20:hover,
.emotion-20:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20:hover,
.emotion-20:focus {
  color: #4a4f62;
  background-color: #e9e7ec;
}

.emotion-20:focus {
  box-shadow: 0 0 0 2px rgba(246,245,247,0.25);
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class=" emotion-2 emotion-3"
      data-testid="rich-select-richselect-options"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="emotion-4"
      />
      <div
        class=" emotion-5"
      >
        <div
          class=" emotion-6"
        >
          <label
            aria-live="assertive"
            class="emotion-7 emotion-8"
            for="input-6c756c756c756c756c756c756c756c75"
            id="label-6c756c756c756c756c756c756c756c75"
          >
            Select an option in the list
          </label>
          <div
            class=" emotion-9"
          >
            Select an option in the list
          </div>
          <div
            class="emotion-10"
          >
            <div
              class="emotion-11"
              style="caret-color: transparent; display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" emotion-12"
        >
          <span
            class=" emotion-13"
          />
          <div
            aria-hidden="true"
            class=" emotion-14"
          >
            <svg
              class="sc-ui-icon emotion-15 emotion-16"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="richselect-options"
        type="hidden"
        value=""
      />
      <div
        class="emotion-17"
      >
        <div
          class="emotion-18"
        />
      </div>
    </div>
    <button
      aria-disabled="false"
      class="emotion-19 emotion-20"
      data-testid="rich-select-tags-add"
      type="button"
    >
      <div
        class="emotion-21 emotion-22"
      >
        Add
      </div>
    </button>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 0;
  padding: 8px 0;
}

.emotion-0>input:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.4);
}

.emotion-0>* {
  margin-bottom: 6px;
}

.emotion-0>*:not(:last-child) {
  margin-right: 6px;
}

.emotion-2 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #b2b6c3;
  padding: 4px;
  width: 32px;
  height: 32px;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #eeeeff;
}

.emotion-6:hover svg,
.emotion-6:focus svg {
  fill: #4f0599;
}

.emotion-8 {
  fill: #b2b6c3;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-8.emotion-8 {
  vertical-align: middle;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <span
        aria-disabled="false"
        class="emotion-3 emotion-4"
      >
        One
      </span>
      <button
        class="emotion-5 emotion-6"
        type="button"
      >
        <svg
          class="sc-ui-icon emotion-7 emotion-8"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RichSelectTags renders correctly with icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px 16px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 34px;
  margin-right: 16px;
}

.emotion-4 {
  width: 100%;
  max-width: 34px;
  height: auto;
}

.emotion-7 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
}

.emotion-7.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-8 {
  z-index: 9999;
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  width: 1px;
  position: absolute;
  overflow: hidden;
  padding: 0;
  white-space: nowrap;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border-color: #dce1eb;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  min-height: 48px;
  outline: 0!important;
  position: relative;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  box-sizing: border-box;
  color: #4a4f62;
  font-size: 16px;
  font-weight: 500;
  line-height: 24px;
  -webkit-animation: none;
  animation: none;
}

.emotion-9:hover {
  border-color: hsl(0, 0%, 70%);
}

.emotion-9:focus-within {
  border-color: #4f0599;
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.25);
}

.emotion-9:focus-within svg {
  fill: #4f0599;
}

.emotion-9:hover {
  border-color: #4f0599;
}

.emotion-9:hover svg {
  fill: #4f0599;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 2px 8px;
  -webkit-overflow-scrolling: touch;
  position: relative;
  overflow: hidden;
  box-sizing: border-box;
  height: 100%;
}

.emotion-12 {
  position: absolute;
  left: 0;
  top: 6px;
  font-weight: 400;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 250ms ease;
  transition: transform 250ms ease;
  opacity: 0;
}

.emotion-13 {
  color: #b2b6c3;
  margin-left: 2px;
  margin-right: 2px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  box-sizing: border-box;
}

.emotion-14 {
  margin: 2px;
  padding-bottom: 2px;
  padding-top: 2px;
  visibility: visible;
  color: hsl(0, 0%, 20%);
  box-sizing: border-box;
}

.emotion-15 input {
  position: absolute;
  top: 50%;
}

.emotion-16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  box-sizing: border-box;
  max-height: 48px;
}

.emotion-17 {
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  background-color: #eeeeff;
  margin-bottom: 8px;
  margin-top: 8px;
  width: 1px;
  box-sizing: border-box;
  display: none;
}

.emotion-18 {
  color: hsl(0, 0%, 80%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  -webkit-transition: color 150ms;
  transition: color 150ms;
  box-sizing: border-box;
}

.emotion-18:hover {
  color: hsl(0, 0%, 60%);
}

.emotion-20 {
  fill: #d4dae7;
  height: 11px;
  width: 11px;
  min-width: 11px;
  min-height: 11px;
}

.emotion-20.emotion-20 {
  vertical-align: middle;
  margin-right: 0;
}

.emotion-21 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-21.emotion-21 {
  overflow: hidden;
}

.emotion-22.emotion-22 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #f6f5f7;
  color: #4a4f62;
  font-size: 16px;
  line-height: 32px;
  font-weight: 500;
  padding: 8px 16px;
}

.emotion-24.emotion-24 {
  min-width: 144px;
  margin-left: 16px;
}

.emotion-24:hover,
.emotion-24:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24:hover,
.emotion-24:focus {
  color: #4a4f62;
  background-color: #e9e7ec;
}

.emotion-24:focus {
  box-shadow: 0 0 0 2px rgba(246,245,247,0.25);
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="ip-flexible"
        class="emotion-4 emotion-5"
        src="/toto.png"
      />
    </div>
    <div
      class=" emotion-6 emotion-7"
      data-testid="rich-select-richselect-options"
    >
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="emotion-8"
      />
      <div
        class=" emotion-9"
      >
        <div
          class=" emotion-10"
        >
          <label
            aria-live="assertive"
            class="emotion-11 emotion-12"
            for="input-6c756c756c756c756c756c756c756c75"
            id="label-6c756c756c756c756c756c756c756c75"
          >
            Select an option in the list
          </label>
          <div
            class=" emotion-13"
          >
            Select an option in the list
          </div>
          <div
            class="emotion-14"
          >
            <div
              class="emotion-15"
              style="caret-color: transparent; display: inline-block;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="label-6c756c756c756c756c756c756c756c75"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                id="input-6c756c756c756c756c756c756c756c75"
                spellcheck="false"
                style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
              <div
                style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
              />
            </div>
          </div>
        </div>
        <div
          class=" emotion-16"
        >
          <span
            class=" emotion-17"
          />
          <div
            aria-hidden="true"
            class=" emotion-18"
          >
            <svg
              class="sc-ui-icon emotion-19 emotion-20"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.88,18.29l-9-8.55a2.75,2.75,0,0,1,0-4,3.12,3.12,0,0,1,4.24,0L12,12.25l6.88-6.54a3.12,3.12,0,0,1,4.24,0,2.75,2.75,0,0,1,0,4l-9,8.55a3.12,3.12,0,0,1-4.24,0Z"
              />
            </svg>
          </div>
        </div>
      </div>
      <input
        name="richselect-options"
        type="hidden"
        value=""
      />
      <div
        class="emotion-21"
      >
        <div
          class="emotion-22"
        />
      </div>
    </div>
    <button
      aria-disabled="false"
      class="emotion-23 emotion-24"
      data-testid="rich-select-tags-add"
      type="button"
    >
      <div
        class="emotion-25 emotion-26"
      >
        Add
      </div>
    </button>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 0;
  padding: 8px 0;
}

.emotion-0>input:focus {
  box-shadow: 0 0 1px 2px rgba(79,5,153,0.4);
}

.emotion-0>* {
  margin-bottom: 6px;
}

.emotion-0>*:not(:last-child) {
  margin-right: 6px;
}

.emotion-2 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  margin-left: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid #b2b6c3;
  padding: 4px;
  width: 32px;
  height: 32px;
}

.emotion-6:hover,
.emotion-6:focus {
  background-color: #eeeeff;
}

.emotion-6:hover svg,
.emotion-6:focus svg {
  fill: #4f0599;
}

.emotion-8 {
  fill: #b2b6c3;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-8.emotion-8 {
  vertical-align: middle;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <span
        aria-disabled="false"
        class="emotion-3 emotion-4"
      >
        One
      </span>
      <button
        class="emotion-5 emotion-6"
        type="button"
      >
        <svg
          class="sc-ui-icon emotion-7 emotion-8"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
